--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     />
     <meta
       name="keywords"
-      content="Eldenabih Tavirazin Lutvie"
+      content="Eldenabih Tavirazin Lutvie, eldenabih tavirazin lutvie, tavi, Tavi, tavilutvie, Tavilutvie, eldenabih, Eldenabih, tavirazin, Tavirazin, lutvie, Lutvie"
     />
     <meta name="author" content="Eldenabih Tavirazin Lutvie">
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
