--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Eldenabih Tavirazin Lutvie - Portofolio</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
@@ -11,6 +12,7 @@
       name="keywords"
       content="Eldenabih Tavirazin Lutvie, eldenabih tavirazin lutvie, tavi, Tavi, tavilutvie, Tavilutvie, eldenabih, Eldenabih, tavirazin, Tavirazin, lutvie, Lutvie"
     />
+    <meta name="author" content="Eldenabih Tavirazin Lutvie" />
     <meta name="author" content="Eldenabih Tavirazin Lutvie">
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
@@ -29,7 +31,7 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-    <title>Eldenabih Tavirazin Lutvie</title>
+    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
