--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-    
+    <meta name="google-site-verification" content="jpIq2yCUjvLXRQ1B29ELFF1crMHPHe55Y4kzir8XeLI" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
