--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     />
     <meta name="author" content="Eldenabih Tavirazin Lutvie" />
     <meta name="author" content="Eldenabih Tavirazin Lutvie">
-    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+    <!-- <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
@@ -26,11 +26,19 @@
     <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/manifest.json">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"> -->
+    
+    
+    <link rel="shortcut icon" href="/My Logo.ico" type="image/x-icon">
+    <link rel="icon" href="/My Logo.ico" type="image/x-icon">
+
+
+    <!-- <link rel="manifest" href="/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#ffffff"> -->
+
+
     <meta name="google-site-verification" content="jpIq2yCUjvLXRQ1B29ELFF1crMHPHe55Y4kzir8XeLI" />
   </head>
   <body>
